--- a/forma-pagamento.html
+++ b/forma-pagamento.html
@@ -27,8 +27,8 @@
             <label for="pix">Pix</label>
         </div>
     </form>
-    <button type="button" onclick="validarPagamento('finalizado.html')" id="botao-confirmapagamento">Confirmar Pagamento</button>
-
+    <button type="button" onclick="confirmarPedido()" id='botao-confirmapagamento'>Confirmar Pagamento</button> 
+    <button type="button" onclick="reiniciarEVoltar()" id="fazer-pedidoRecusa">Reiniciar e Voltar</button>
     <script src="script.js"></script>
 </body>
 </html>
