--- a/lanches.html
+++ b/lanches.html
@@ -17,20 +17,20 @@
         </ul>
     </header>
 
-    <h1 id="titulo-lanches">Escolha sua bebida:</h1>
+    <h1 id="titulo-lanches">Escolha seu lanche:</h1>
     <section id="section-bebidas">
         <form id="formulario-bebidas">
             <div class="bebida-item">
-                <input type="checkbox" id="bebida1" name="bebida" value="CocaCola" class="checar" data-preco="5.99">
+                <input type="checkbox" id="bebida1" name="bebida" value="MecLancheFeliz" class="checar" data-preco="9.99">
                 <br>
                 <img src="https://example.com/imagem1.jpg" alt="imagem bebida 1" />
-                <p class="subtitulo">Coca-Cola R$5,99</p>
+                <p class="subtitulo">MecLancheFeliz R$9,99</p>
             </div>
             <div class="bebida-item">
-                <input type="checkbox" id="bebida2" name="bebida" value="SucoLaranja" class="checar" data-preco="6.99">
+                <input type="checkbox" id="bebida2" name="bebida" value="Mec" class="checar" data-preco="8.99">
                 <br>
                 <img src="https://example.com/imagem2.jpg" alt="imagem bebida 2" />
-                <p class="subtitulo">Suco de Laranja R$6,99</p>
+                <p class="subtitulo">Mec R$8,99</p>
             </div>
         </form>
     </section>
@@ -38,7 +38,7 @@
     <footer id="footer-btn">
         <a href="lanches.html" tile="pag"><input id="btn-voltar" type="button" value="VOLTAR"></a>
         <a href="sobremesas.html" tile="pag"><input id="btn-proximo" type="button" value="PRÓXIMO"></a>
-        <button type="button" onclick="coletarItens('sobremesas.html')" id="fazer-pedido">Próximo</button>
+        <button type="button" onclick="coletarItens('sobremesas.html')" id="fazer-pedido">Confirmar</button>
     </footer>
 </body>
 </html>
