--- a/sobremesas.html
+++ b/sobremesas.html
@@ -38,7 +38,7 @@
     <footer id="footer-btn">
         <a href="bebidas.html" tile="pag"><input id="btn-voltar" type="button" value="VOLTAR"></a>
         <a href="resumo.html" tile="pag"><input id="btn-proximo" type="button" value="PRÓXIMO"></a>
-        <button type="button" onclick="coletarItens('pagamento.html')" id="fazer-pedido">Próximo</button>
+        <button type="button" onclick="coletarItens('cliente.html')" id="fazer-pedido">Confirmar Pedido</button>
     </footer>
 </body>
 </html>
