--- a/bebidas.html
+++ b/bebidas.html
@@ -57,12 +57,10 @@
         <a href="lanches.html" tile="pag">
             <input id="btn-voltar" type="button" value="VOLTAR">
         </a>
-
-        <a href="sobremesas.html" tile="pag">
+        <a href="lanches.html" tile="pag">
             <input id="btn-proximo" type="button" value="PRÓXIMO">
         </a>
-        
-        <button type="button" onclick="finalizarPedido('sobremesas.html')" id="fazer-pedido">Próximo</button>
+        <button type="button" onclick="coletarItens('cliente.html')" id="fazer-pedido">Confirmar Pedido</button>
     </footer>
     </body>
 </html>
