--- a/administrador.html
+++ b/administrador.html
@@ -23,7 +23,7 @@
         <br><br>
         <button type="submit" style="padding:30px 50px 30px 50px;">Login</button> 
         <br><br>
-    </form> <div id="message"></div> 
+    </form> <div id="message" style="text-align: center;"></div> 
     <script> document.getElementById('login-form').addEventListener('submit', function(event) 
     { event.preventDefault(); const username = document.getElementById('username').value; 
     const password = document.getElementById('password').value; fetch('http://localhost:8080/login', 
