--- a/bebidas.html
+++ b/bebidas.html
@@ -20,16 +20,16 @@
                     <img id="logoMectopo" src="imagem.png" alt="Logo McDonalds" />
                 </li>
                 <li class="elements-menu">
-                    <a href="combos.html" tile="pag" class="btns-menu" id="btnMenu-combos">COMBOS</a>
+                    <a href="combos.html" title="pag" class="btns-menu" id="btnMenu-combos">COMBOS</a>
                 </li>
                 <li class="elements-menu">
-                    <a href="lanches.html" tile="pag" class="btns-menu" id="btnMenu-lanches">LANCHES</a>
+                    <a href="lanches.html" title="pag" class="btns-menu" id="btnMenu-lanches">LANCHES</a>
                 </li>
                 <li class="elements-menu">
-                    <a href="bebidas.html" tile="pag" class="btns-menu" id="btnMenu-bebidas">BEBIDAS</a>
+                    <a href="bebidas.html" title="pag" class="btns-menu" id="btnMenu-bebidas">BEBIDAS</a>
                 </li>
                 <li class="elements-menu">
-                    <a href="sobremesas.html" tile="pag" class="btns-menu" id="btnMenu-sobremesas">SOBREMESAS</a>
+                    <a href="sobremesas.html" titwdle="pag" class="btns-menu" id="btnMenu-sobremesas">SOBREMESAS</a>
                 </li>
             </ul>
         </header>
@@ -40,14 +40,14 @@
             <div class="bebida-item">
                 <input type="checkbox" id="bebida1" name="bebida" value="CocaCola" class="checar">
                 <br>
-                <img src="https://example.com/imagem-bebida1.jpg" alt="imagem bebida 1" />
-                <p class="subtitulo">Refrigerante R$4,99</p>
+                <img src="aaa.jpeg" alt="imagem bebida 1" />
+                <p class="subtitulo">Coca Cola R$4,99</p>
             </div>
             <div class="bebida-item">
                 <input type="checkbox" id="bebida2" name="bebida" value="Fanta" class="checar">
                 <br>
-                <img src="https://example.com/imagem-bebida2.jpg" alt="imagem bebida 2" />
-                <p class="subtitulo">Suco R$3,99</p> 
+                <img src="DC_202002_0721_MediumSprite_Glass_832x472_1-4-product-tile-desktop.jpeg" alt="imagem bebida 2" />
+                <p class="subtitulo">Sprite R$3,99</p> 
             </div>
             <!-- Adicione mais bebidas conforme necessário -->
         </form>
