--- a/combos.html
+++ b/combos.html
@@ -35,7 +35,9 @@
     </section>
 
     <footer id="footer-btn">
+        <a href="lanches.html">
         <button type="button" onclick="coletarItens('lanches.html')" id="btn-proximo">Próximo</button>
+        </a>
     </footer>
     <script src="script.js"></script>
 </body>
