--- a/lanches.html
+++ b/lanches.html
@@ -23,22 +23,22 @@
             <div class="bebida-item">
                 <input type="checkbox" id="bebida1" name="bebida" value="MecLancheFeliz" class="checar" data-preco="9.99">
                 <br>
-                <img src="https://example.com/imagem1.jpg" alt="imagem bebida 1" />
+                <img src="4Formaggi.jpg" alt="imagem lanche 1" />
                 <p class="subtitulo">MecLancheFeliz R$9,99</p>
             </div>
             <div class="bebida-item">
                 <input type="checkbox" id="bebida2" name="bebida" value="Mec" class="checar" data-preco="8.99">
                 <br>
-                <img src="https://example.com/imagem2.jpg" alt="imagem bebida 2" />
+                <img src="smokehouse-mcdonalds-novo-lanche.jpg" alt="imagem lanche 2" />
                 <p class="subtitulo">Mec R$8,99</p>
             </div>
         </form>
     </section>
 
     <footer id="footer-btn">
-        <a href="lanches.html" tile="pag"><input id="btn-voltar" type="button" value="VOLTAR"></a>
+        <a href="combos.html" tile="pag"><input id="btn-voltar" type="button" value="VOLTAR"></a>
         <a href="sobremesas.html" tile="pag"><input id="btn-proximo" type="button" value="PRÓXIMO"></a>
-        <button type="button" onclick="coletarItens('sobremesas.html')" id="fazer-pedido">Confirmar</button>
+        <button type="button" onclick="coletarItens('cliente.html')" id="fazer-pedido">Confirmar Pedido</button>
     </footer>
 </body>
 </html>
