--- a/sobremesas.html
+++ b/sobremesas.html
@@ -23,13 +23,13 @@
             <div class="sobremesa-item">
                 <input type="checkbox" id="sobremesa1" name="sobremesa" value="Sundae" class="checar" data-preco="7.99">
                 <br>
-                <img src="https://example.com/imagem1.jpg" alt="imagem sobremesa 1" />
+                <img src="mcflurry.webp" alt="imagem sobremesa 1" />
                 <p class="subtitulo">Sundae R$7,99</p>
             </div>
             <div class="sobremesa-item">
                 <input type="checkbox" id="sobremesa2" name="sobremesa" value="Torta" class="checar" data-preco="4.99">
                 <br>
-                <img src="https://example.com/imagem2.jpg" alt="imagem sobremesa 2" />
+                <img src="torta.jpeg" alt="imagem sobremesa 2" />
                 <p class="subtitulo">Torta de Maçã R$4,99</p>
             </div>
         </form>
@@ -37,7 +37,7 @@
 
     <footer id="footer-btn">
         <a href="bebidas.html" tile="pag"><input id="btn-voltar" type="button" value="VOLTAR"></a>
-        <a href="resumo.html" tile="pag"><input id="btn-proximo" type="button" value="PRÓXIMO"></a>
+        <a href="combos.html" tile="pag"><input id="btn-proximo" type="button" value="PRÓXIMO"></a>
         <button type="button" onclick="coletarItens('cliente.html')" id="fazer-pedido">Confirmar Pedido</button>
     </footer>
 </body>
